--- a/src/Pages/ChatBox/ChatBox.css
+++ b/src/Pages/ChatBox/ChatBox.css
@@ -22,7 +22,7 @@
 }
 .viewAvatarItem{
     margin-left: 20px;
-    background-image: url('../../images/nopic.jpg');
+    /* background-image: url('../../images/nopic.jpg'); */
 }
 
 .headerChatBoard {
